#9: -Fix alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -310,6 +310,10 @@ a{color:inherit;text-decoration:none}
 	width: 25px;
 	height: 25px;
 }
+.nail-likes {
+	padding-top: 5px;
+	margin-right: -25px;
+}
 /* Style for colored heart icon
 .btn-icon .nailed-it {
 	-webkit-transition: color 0.1s ease;
